--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "twill",
+  "name": "twill-frontend",
   "version": "1.0.0",
   "main": "index.tsx",
   "scripts": {
     "start": "expo start",
     "startc": "expo start -c",
+    "startt": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -17,6 +18,7 @@
     "expo": "~54.0.29",
     "expo-font": "~14.0.10",
     "expo-linear-gradient": "~15.0.8",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
