--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "nodemailer": "^7.0.11",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.1",
     "@types/nodemailer": "^7.0.4",
+    "@types/nodemailer-mailgun-transport": "^1.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
