--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "nodemailer-mailgun-transport": "^2.1.5",
     "uuid": "^13.0.0"
